--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 </li>
             </ul>
         </nav>
+        <!-- «B8» Контакты в хедере (почта и телефон) находятся вне тега <nav> -->
         <ul>
             <li>
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -33,5 +34,49 @@
             </li>
         </ul>
     </header>
+    <main>
+        <section>
+            <!-- «B9» Тег <h1> использован один раз на странице. -->
+            <h1>Эффективные решения <br> для вашего бизнеса</h1>
+            <!-- «B10» Элемент с текстом "Заказать услугу" - это кнопка с type="button". -->
+            <button type="button">Заказать услугу</button>
+        </section>
+        <section>
+            <!-- «B11» Заголовки секций размечены тегом <h2> -->
+            <h2>Нашы преимущества</h2>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li>
+                    <img src="/image/pic1.jpg" alt="Написание программ на компьютер" width="370">
+                </li>
+                <li>
+                    <img src="/image/pic2.jpg" alt="Создание мобильных приложений" width="370">
+                </li>
+                <li>
+                    <img src="/image/pic3.jpg" alt="Веб-дизайн" width="370">
+                </li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
