--- a/index.html
+++ b/index.html
@@ -77,6 +77,47 @@
                 </li>
             </ul>
         </section>
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="/image/team1.jpg" alt="Игорь Демьяненко" width="270">
+                    <h3>Игорь Демьяненко</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="/image/team2.jpg" alt="Ольга Репина" width="270">
+                    <h3>Ольга Репина</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="/image/team3.jpg" alt="Николай Тарасов" width="270">
+                    <h3>Николай Тарасов</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="/image/team4.jpg" alt="Михаил Ермаков" width="270">
+                    <h3>Михаил Ермаков</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
     </main>
+    <footer>
+        <a href="/">Webstudio</a>
+        <address>
+            <ul>
+                <li>
+                    г. Киев, пр-т Леси Украинки, 26
+                </li>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+            </ul>
+        </address>
+    </footer>
 </body>
 </html>
