--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <img src="/image/pic1.jpg" alt="Написание программ на компьютер" width="370">
+                    <img src="./image/pic1.jpg" alt="Написание программ на компьютер" width="370" height="294">
                 </li>
                 <li>
-                    <img src="/image/pic2.jpg" alt="Создание мобильных приложений" width="370">
+                    <img src="./image/pic2.jpg" alt="Создание мобильных приложений" width="370" height="294">
                 </li>
                 <li>
-                    <img src="/image/pic3.jpg" alt="Веб-дизайн" width="370">
+                    <img src="./image/pic3.jpg" alt="Веб-дизайн" width="370" height="294">
                 </li>
             </ul>
         </section>
@@ -81,22 +81,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="/image/team1.jpg" alt="Игорь Демьяненко" width="270">
+                    <img src="./image/team1.jpg" alt="Игорь Демьяненко" width="270" height="260">
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/image/team2.jpg" alt="Ольга Репина" width="270">
+                    <img src="./image/team2.jpg" alt="Ольга Репина" width="270" height="260">
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/image/team3.jpg" alt="Николай Тарасов" width="270">
+                    <img src="./image/team3.jpg" alt="Николай Тарасов" width="270" height="260">
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="/image/team4.jpg" alt="Михаил Ермаков" width="270">
+                    <img src="./image/team4.jpg" alt="Михаил Ермаков" width="270" height="260">
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
@@ -106,10 +106,8 @@
     <footer>
         <a href="/">Webstudio</a>
         <address>
+            <p> г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
-                <li>
-                    г. Киев, пр-т Леси Украинки, 26
-                </li>
                 <li>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
