--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="/">Webstudio</a>
+        <a href="./index.html">Webstudio</a>
         <nav>
             <ul>
                 <li>
@@ -98,9 +98,9 @@
         </section>
     </main>
     <footer>
-        <a href="/">Webstudio</a>
+        <a href="./index.html">Webstudio</a>
         <address>
-            <p> г. Киев, пр-т Леси Украинки, 26</p>
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
                 <li>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
