--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="./index.html">Webstudio</a>
+        <a href="./goit-markup-hw-01/index.html">Webstudio</a>
         <nav>
             <ul>
                 <li>
