--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="https://ortbogdan.github.io/goit-markup-hw-01/index.html">Webstudio</a>
+        <a href="">Webstudio</a>
         <nav>
             <ul>
                 <li>
@@ -98,7 +98,7 @@
         </section>
     </main>
     <footer>
-        <a href="https://ortbogdan.github.io/goit-markup-hw-01/index.html">Webstudio</a>
+        <a href="">Webstudio</a>
         <address>
             <p>г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
