--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="">Webstudio</a>
+        <a href="./index.html" lang="en">Webstudio</a>
         <nav>
             <ul>
                 <li>
@@ -24,7 +24,7 @@
         </nav>
         <ul>
             <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com">info&#64;devstudio.com</a>
             </li>
             <li>
                 <a href="tel:+380961111111">+38 096 111 11 11</a>
@@ -98,12 +98,12 @@
         </section>
     </main>
     <footer>
-        <a href="">Webstudio</a>
+        <a href="./index.html" lang="en">Webstudio</a>
         <address>
             <p>г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com">info&#64;devstudio.com</a>
                 </li>
                 <li>
                     <a href="tel:+380961111111">+38 096 111 11 11</a>
