--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <header>
-        <a href="./index.html" lang="en">Webstudio</a>
         <nav>
             <ul>
+                <li>
+                    <a href="./" lang="en">Webstudio</a>
+                </li>
                 <li>
                     <a href="">Студия</a>
                 </li>
@@ -24,7 +26,7 @@
         </nav>
         <ul>
             <li>
-                <a href="mailto:info@devstudio.com">info&#64;devstudio.com</a>
+                <a href="mailto:info@devstudio.com" lang="en">info&#64;devstudio.com</a>
             </li>
             <li>
                 <a href="tel:+380961111111">+38 096 111 11 11</a>
@@ -37,7 +39,7 @@
             <button type="button">Заказать услугу</button>
         </section>
         <section>
-            <h2>Нашы преимущества</h2>
+            <h2 hidden>Нашы преимущества</h2>
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
@@ -67,7 +69,7 @@
                     <img src="./image/pic2.jpg" alt="Создание мобильных приложений" width="370" height="294">
                 </li>
                 <li>
-                    <img src="./image/pic3.jpg" alt="Веб-дизайн" width="370" height="294">
+                    <img src="./image/pic3.jpg" alt="Создание веб-дизайна" width="370" height="294">
                 </li>
             </ul>
         </section>
@@ -98,12 +100,14 @@
         </section>
     </main>
     <footer>
-        <a href="./index.html" lang="en">Webstudio</a>
+        <a href="./" lang="en">Webstudio</a>
         <address>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com">info&#64;devstudio.com</a>
+                    <a href="https://goo.gl/maps/JSEBy3F9zfWoDeXW9" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                </li>
+                <li>
+                    <a href="mailto:info@devstudio.com" lang="en">info&#64;devstudio.com</a>
                 </li>
                 <li>
                     <a href="tel:+380961111111">+38 096 111 11 11</a>
